--- a/untukmu/index.html
+++ b/untukmu/index.html
@@ -19,8 +19,9 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hai
+      halo`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
